@@ -1,8 +1,10 @@
 package com.app.metube.security;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -12,7 +14,7 @@ import org.springframework.stereotype.Service;
 import com.app.metube.entity.User;
 import com.app.metube.repo.UserRepo;
 
-//@Service
+@Service
 public class MyUserDetailsService implements UserDetailsService {
 
 	private final UserRepo userRepo;
@@ -23,15 +25,13 @@ public class MyUserDetailsService implements UserDetailsService {
 
 	@Override
 	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-		Optional<User> user = userRepo.findByLogin(username);
-		if (user.isEmpty()) {
-			throw new UsernameNotFoundException("This user does not exist in the database");
-		}
+		User user = userRepo.findByLogin(username)
+				.orElseThrow(() -> new UsernameNotFoundException("User details not found for the user: " + username));
 
-		User dbUser = user.get();
-
-		return new org.springframework.security.core.userdetails.User(dbUser.getUsername(), dbUser.getPassword(),
-				Arrays.asList(dbUser.getRole().name()).stream().map(SimpleGrantedAuthority::new).toList());
+		List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(user.getRole().name()));
+		
+		return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(),
+				authorities);
 	}
 
 }
